--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@highlightjs/vue-plugin": "highlightjs/vue-plugin",
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.8.3",
+    "highlight": "^0.2.4",
     "quasar": "^2.0.0",
     "vue": "^3.2.13",
     "vue-easy-lightbox": "^1.16.0",
